--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,12 +4,19 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "gemini-worker",
+	"name": "gemini",
 	"main": "src/index.js",
 	"compatibility_date": "2025-06-10",
+	"compatibility_flags": ["nodejs_compat"],
 	"observability": {
 		"enabled": true
-	}
+	},
+	"r2_buckets": [
+		{
+			"binding": "LLM_GEMINI_IMAGE",
+			"bucket_name": "llm-img"
+		}
+	]
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
